doc: add get player details api contract
